# subtext

./: .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
src/subtext/: analyse.py  dataset.py  scorer.py  subtext.py  task.py  taxonomy.py
tests/: fixtures.py  test_dataset.py  test_scorer.py  test_task.py
