[project]
name = "subtext"
version = "0.1.0"
description = "Evaluating misogyny and sexism in large language models"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "inspect-ai>=0.3",
]

[dependency-groups]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/subtext"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
strict = true
python_version = "3.12"
files = ["src/subtext"]

[tool.pytest.ini_options]
testpaths = ["tests"]
